--- a/src/index.html
+++ b/src/index.html
@@ -161,23 +161,23 @@
         
         <div class="text-center mt-10">
 
-          <div class='button  inline-block w-40 h-16 mr-5 mb-7  bg-pink-400  rounded-lg cursor-pointer select-none
+          <a class='button  inline-block w-40 h-16 mr-5 mb-7  bg-pink-400  rounded-lg cursor-pointer select-none
           active:translate-y-2  active:[box-shadow:0_0px_0_0_#ec4899,0_0px_0_0_#1b70f841]
           active:border-b-[0px]
           transition-all duration-150 [box-shadow:0_10px_0_0_#ec4899,0_15px_0_0_#ec489980]
-          border-b-[1px] border-pink-300
-        '>
+          border-b-[1px] border-pink-300 
+        ' href="http://maconcode.com/#"> 
           <span class='flex flex-col justify-center items-center h-full text-white font-bold text-lg '>Join Us on Slack</span>
-        </div>
+        </a>
 
-        <div class='button  inline-block w-40 h-16 mr-5  bg-pink-400  rounded-lg cursor-pointer select-none
+        <a class='button  inline-block w-40 h-16 mr-5  bg-pink-400  rounded-lg cursor-pointer select-none
         active:translate-y-2  active:[box-shadow:0_0px_0_0_#ec4899,0_0px_0_0_#1b70f841]
         active:border-b-[0px]
         transition-all duration-150 [box-shadow:0_10px_0_0_#ec4899,0_15px_0_0_#ec489980]
         border-b-[1px] border-pink-300
-      '>
+      'href="https://www.meetup.com/macon-code/">
         <span class='flex flex-col justify-center items-center h-full text-white font-bold text-lg '> RSVP on meetup</span>
-      </div>
+      </a>
       
           </div>
       </header>
